[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Planta/ControlBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Planta/Charts.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Planta/Game_base.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Planta/Font_game_UI.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Planta/Charts_game.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/dlgGameover.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/SFX/Waiting.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/SFX/Victory.ogg" type="AudioStream" id=8]
[ext_resource path="res://Scenes/UI/Touch.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/SFX/Alert.ogg" type="AudioStream" id=10]

[node name="Game_base" type="Node"]
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 88.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI"]
margin_left = 1067.0
margin_top = 10.0
margin_right = 1228.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.796078 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "60 seg"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorPlayer" type="Label" parent="UI"]
margin_left = 483.049
margin_top = 8.24191
margin_right = 693.049
margin_bottom = 68.2419
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.345098, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.615686 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "0 erro"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbPlayer" type="Label" parent="UI"]
margin_left = 364.968
margin_top = 8.24191
margin_right = 472.968
margin_bottom = 68.2419
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.345098, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.615686 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "VocÃª:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorCPU" type="Label" parent="UI"]
margin_left = 815.049
margin_top = 8.24191
margin_right = 1064.05
margin_bottom = 68.2419
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.796078 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "0 erro"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbCPU" type="Label" parent="UI"]
margin_left = 704.279
margin_top = 8.24191
margin_right = 812.279
margin_bottom = 68.2419
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.796078 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "CPU:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Timer" parent="UI"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="UserControl" type="Control" parent="."]
anchor_bottom = 1.0
margin_top = 95.0
margin_right = 382.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Plantas" type="Node" parent="."]

[node name="Controladores" type="Node" parent="."]

[node name="ControlBoard" parent="." instance=ExtResource( 1 )]
position = Vector2( 59.775, 0 )

[node name="Clock" type="Timer" parent="."]

[node name="SP_Changer" type="Timer" parent="."]
wait_time = 10.0

[node name="Chart" type="Control" parent="."]
margin_left = 384.0
margin_top = 102.0
margin_right = 1228.0
margin_bottom = 699.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Charts" parent="Chart" instance=ExtResource( 2 )]
margin_right = 474.42
margin_bottom = 220.414
script = ExtResource( 5 )

[node name="dlgGameover" parent="." instance=ExtResource( 6 )]
visible = false

[node name="SFX" type="Node" parent="."]

[node name="sndWaiting" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
autoplay = true

[node name="sndTheme" type="AudioStreamPlayer" parent="SFX"]

[node name="sndVictory" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )

[node name="sndAlert" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="Touch" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 180, 500 )
scale = Vector2( 0.5, 0.5 )
[connection signal="timeout" from="UI/Hint" to="." method="_on_Hint_timeout"]
[connection signal="timeout" from="Clock" to="." method="_on_1s"]
[connection signal="timeout" from="SP_Changer" to="." method="_on_SP_Changer_timeout"]
